2005-07-24  Mo DeJong  <mdejong@users.sourceforge.net>

	* README: Add info about mingw and mention
	pkgIndex.tcl.in.
	* configure: Regen.
	* configure.in: Emit a pkgIndex.tcl in the
	build directory. This makes it possible to
	build and install sampleextension without
	having to run anything in a tclsh shell.
	A build process that depends on running
	the software being built will not work
	when cross compiling.
	* pkgIndex.tcl.in: Add template.

2005-07-24  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Subst TCLSH_PROG from PATH
	as SYSTEM_TCLSH and subst BUILD_TCLSH and
	BUILD_WISH. Use SYSTEM_TCLSH for the
 	pkgIndex.tcl generation target.
	* configure: Regen.
	* configure.in: Invoke new TEA_BUILD_TCLSH
	and TEA_BUILD_WISH macros defined in tcl.m4.
	[Tcl bug 1160114]
	[Tcl patch 1244153]

2005-06-23  Daniel Steffen  <das@users.sourceforge.net>

	* Makefile.in: added commented out variable definitions for building
	extensions using Tk, to document exactly what needs to be added for Tk.
	Commented out obsolete makefile variables TCL_DEFS and TCL_LIBS.

	* configure: autoconf-2.59 for TEA updates.

2005-06-18  Daniel Steffen  <das@users.sourceforge.net>

	* configure: autoconf-2.59 for TEA updates.

2005-06-04  Daniel Steffen  <das@users.sourceforge.net>

	* configure: autoconf-2.59 for TEA updates.

2005-04-25  Daniel Steffen  <das@users.sourceforge.net>

	* Makefile.in: split out TCLLIBPATH from TCLSH_ENV to allow
	customization and overriding, add PKG_LIB_FILE dependency to
	pkgIndex.tcl target.
	* configure.in: added AC_DEFINE* descriptions to allow
	use with autoheader.
	* configure: autoconf-2.59.

2005-03-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: add binaries dep to install-lib-binaries and
	install-bin-binaries. (steffen)

2005-03-24  Don Porter  <dgp@users.sf.net>

	* Makefile.in:	Corrected the `make dist` target.
	* configure:	TEA updates.

2005-03-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure: regen with later tcl.m4.